Bug 1195061 - Correctly restore audio hardware mix format after attempting to use an alternative format.  r=padenot